--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="top-banner"
+      <div class=""></div>"banner-text"
     <nav>navbar</nav>
     <header>header section</header>
     <section>company</section>
